# finance-tracker-rs

./: Cargo.toml  Makefile  README.md
.sqlx/: query-103cbec9e7354c43e4dd7aa32e4dc960391cbf22c9b568d4dcd90c95f6f9af2c.json  query-4777b0a2b445e95f752b5171b5b62b05e3562901dbe4c83b3689113a852fb669.json  query-81d3711563fbfb5458f46f03d5adb324be5715a423a179a6159fbe92b30f6a29.json  query-b5186922b0d54eee34c6952bf6f8247dff82ae633fbfe54a5dc6368da9437ca8.json  query-b6b177e9839e3baeb37c5932fddcf65ba3f6d3838e626eb3036762786957125f.json  query-b81a840848ac239b1472c7ad8bcfea4090a28a1cd6621e4dfe7aeb53923b4367.json  query-ef84541ebf95908fec4bafbf8a3d4d88380949ac7775c2ccf9d5246b34757588.json
migrations/: 20240315000000_remove_date_from_transactions.sql  20250612122459_create_users_and_transactions_tables.sql  20250613040251_alter-updated-at.sql
src/: lib.rs  main.rs
src/config/: db.rs
src/middleware/: jwt.rs  logging.rs  mod.rs  rbac.rs
src/modules/transactions/: dtos.rs  models.rs  repositories.rs  routes.rs  services.rs
src/modules/users/: dtos.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/utils/: bcrypt.rs  constants.rs  errors.rs  jwt.rs  mod.rs  not_found.rs  response.rs  roles.rs
