[package]
name = "finance_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Elie Mugenzi <eliemugenzi@gmail.com>"]

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.6"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "bigdecimal", "chrono"] }
sqlx-cli = "0.8.6"
tokio = "1.45.1"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0.140"
uuid = { version = "1.0", features = ["v4", "serde"] }
